# MathexLab

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
mathex_scripts/: 3D plot.m  3d_helix.m  3d_ripple_surface.m  3d_travelling_wave.m  Animation_test1.m  Ellipsoid.m  Gausian_Hill.m  Hyperbolic_saddle.m  Script.m  Symbolic_Var.m  Torus.m  aise_hi.m  comet3.m  hello_world.m  lin_alg.m  simul1.m  simul2.m  sine_wave_peaks.m  sphere.m  stress_test.m  struct.m  test.m  test_ani2.m
mathexlab/: cli.py
mathexlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mathexlab/config/: defaults.py
mathexlab/io/: __init__.py  datareader.py  exporter.py  mfile.py  saver.py
mathexlab/kernel/: __init__.py  errors.py  executor.py  function_runtime.py  loader.py  path_manager.py  session.py  stdout.py
mathexlab/language/: ast_nodes.py  builtins.py  functions.py  parser.py  tokenizer.py  transpiler.py
mathexlab/math/: __init__.py  arrays.py  calculus.py  functions.py  linalg.py  optim.py  physics.py  statistics.py  structs.py  symbolic.py  toolbox.py
mathexlab/plotting/: __init__.py  animation.py  engine.py  figure.py  handles.py  mpl_backend.py  plot2d.py  plot3d.py  state.py
mathexlab/toolbox/: __init__.py  control.py  geometry.py  integration.py  interpolation.py  ode.py  pde.py  polynomials.py  signals.py
mathexlab/ui/: __init__.py  app.py  console.py  filebrowser.py  guide.py  kernel_worker.py  menus.py  plotdock.py  variable_inspector.py  workspace.py
mathexlab/ui/editor/: __init__.py  codeeditor.py  gutter.py  scripteditor.py  syntax.py
mathexlab/utils/: typing.py
tests/: test_all_features.py  test_animation.py  test_debug_3d.py  test_integration_cwd.py  test_kernel.py  test_language.py  test_linalg.py  test_pde_benchmark.py  test_phd_features.py  test_physics_features.py  test_plotting_bugs.py  test_signals_new.py  test_sparse.py  test_ui_stress.py  test_varargs.py  test_verify_fix.py
